Bug 1053426 - Fennec crashes when tab sharing is active. r=jesup, a=lmandel